# simple-agent

./: Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  main.py  manage.py  pyproject.toml  results_before_rerank.json  results_rerank.json
app/: di.py  main.py
app/application/agent/: router.py
app/application/ingest/: router.py
app/application/threads/: router.py
app/application/topics/: router.py
app/application/users/: router.py
app/domain/: prompts.py  query_traces.py  thread_summaries.py  threads.py  topics.py  users.py
app/infra/: config.py  models.py
app/infra/db/: utils.py
app/infra/db/alembic/: env.py
app/infra/db/alembic/versions/: 9c2f53642d47_create_topic_table.py  a1b2c3d4e5f6_create_users_table.py  b2c3d4e5f6a7_create_langgraph_tables_and_user_threads.py  c3d4e5f6a7b8_add_query_traces_and_thread_summaries.py  d4e5f6a7b8c9_drop_langgraph_checkpoint_tables.py
app/infra/db/models/: __init__.py  query_traces.py  thread_summaries.py  topics.py  user_threads.py  users.py
app/infra/db/repos/: base.py  exceptions.py  query_traces.py  thread_summaries.py  topics.py  user_threads.py  users.py
app/infra/llm/: client.py
app/infra/qdrant/repos/: exceptions.py  interfaces.py  repos.py
app/logic/handlers/: base.py  thread.py  topic.py  user.py
app/logic/nodes/: agent.py  base.py  chunking.py  diagram.py  embeddings.py  evaluator.py  llm_node.py  load_summary.py  loaders.py  qdrant.py  save_episode.py  state.py  tool_node.py
app/logic/nodes/ingest/: base.py  chunking.py  embeddings.py  loaders.py  metadata_filling.py  qdrant.py
app/logic/services/: __init__.py  chunking.py  embedding.py  evaluation.py  metadata_filling.py  thread.py  vector_store.py  web_loader.py
app/logic/tools/: db.py  rag.py  test.py
scripts/: eval_rag.py  syntesis_dataset.py
scripts/datasets/: negative_dataset.py  positive_dataset.py  syntesis_dataset.py
scripts/datasets/json/: negative_dataset.json  positive_dataset.json
