[project]
name = "simple-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "click>=8.3.1",
    "diagrams>=0.25.1",
    "dishka>=1.7.2",
    "dotenv>=0.9.9",
    "fastapi>=0.128.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-huggingface>=0.0.20",
    "langchain-openai>=0.2.0",
    "langchain-text-splitters>=0.2.0",
    "langgraph>=0.2.0",
    "llama-index>=0.14.15",
    "llama-index-embeddings-huggingface>=0.6.1",
    "llama-index-readers-web>=0.5.6",
    "make>=0.1.6.post2",
    "openai>=2.16.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "qdrant-client>=1.17.0",
    "ruff>=0.14.14",
    "sentence-transformers>=5.2.3",
    "trafilatura>=2.0.0",
    "uvicorn>=0.40.0",
]
